<resources>
    <string name="app_name">Weightdiary</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="calculate">calculate</string>
    <string name="bmi_calculator">BMI calculator</string>
    <string name="cm_kg">cm/kg</string>
    <string name="result">RESULT</string>
    <string name="dash">dash</string>
</resources>
