<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal">



    <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="@string/bmi_calculator"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="@string/cm_kg"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textColor="@android:color/black"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/calculator"/>


    <EditText
            android:id="@+id/input_height"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/height"/>
    <EditText
            android:id="@+id/input_weight"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/weight"/>

    <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/calculate"/>

    <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
              android:layout_height="40dp"
              android:layout_marginTop="20dp"
              android:hint="RESULT"/>


</LinearLayout>